--- a/ReLearning1/Pages/ListGadget/Index.cshtml
+++ b/ReLearning1/Pages/ListGadget/Index.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="col-3">
         <a asp-page="Upsert" class="btn btn-info form-control text-white">
-            Insert New Gadgets
+            Insert New Gadget
         </a>
     </div>
 
